<resources>
    <string name="app_name">NewsExplorer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Something went wrong</string>
    <string name="downloads">Downloads</string>
    <string name="something_went_wrong">Something went wrong…</string>
    <string name="try_again">Try Again</string>
    <string name="discover_short_label">Discover news</string>
    <string name="discover_long_label">See what\'s happening around you…</string>
    <string name="feed_short_label">Daily news</string>
    <string name="feed_long_label">Daily news</string>
    <string name="dummy_text">NASA’s CAPSTONE mission launches to the moon</string>
    <string name="newimgdescription">NewImgDescription</string>
    <string-array name="sports_array">
        <item>Shuttle Badminton</item>
        <item>Tennis</item>
        <item>FootBall</item>
        <item>Basket Ball</item>
        <item>Table Tennis</item>
        <item>Chess</item>
        <item>Hockey</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
</resources>