<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.DiscoverFragment">

    <ImageView
        android:id="@+id/discoverBackBtn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="back"
        android:src="@drawable/ic_back"
        app:tint="?attr/colorOnSecondary"
        app:layout_constraintBottom_toBottomOf="@+id/discoverSearchView"
        app:layout_constraintEnd_toStartOf="@id/discoverSearchView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SearchView
        android:id="@+id/discoverSearchView"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:animateLayoutChanges="true"
        android:background="@drawable/search_bg"
        android:theme="@style/SearchViewStyle"
        app:iconifiedByDefault="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/discoverBackBtn"

        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="Search..." />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/discoverCategoryRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/discoverSearchView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/discoverNewsRV"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discoverCategoryRV" />


    <LinearLayout
        android:id="@+id/discoverErrorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/error"
            android:src="@drawable/error_vector" />

        <TextView
            android:id="@+id/discoverErrorViewTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLines="2"
            android:text="@string/something_went_wrong"
            android:textAlignment="center"
            android:textSize="16sp"
            tools:text="Something went wrong..." />

        <Button
            android:id="@+id/discoverTryAgainBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:minHeight="0dp"
            android:text="@string/try_again"
            android:textSize="12sp" />


    </LinearLayout>


    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/discoverShimmer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discoverCategoryRV"
        app:shimmer_auto_start="true"
        tools:visibility="visible">

        <include layout="@layout/dummy_discover_grid" />
    </com.facebook.shimmer.ShimmerFrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>